--- a/index.html
+++ b/index.html
@@ -1,18 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>2 Displaying Blocks</title>
-	<link rel="stylesheet" type="text/css" href="style.css">
+	<meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Displaying Blocks</title>
+	<meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" href="/css/style.css">
 </head>
 <body>
 	<div id="backdrop">
 		<div id="header">
-			<div class="head1"><img src="/images/github.jpg">
-			</div>
-			<div class="head2"><h1>Display Our Blocks!</h1>
-			</div>
-			<div class="head3"><img src="/images/catandninja.png" style="height: 50px;">
-			</div>
+			<img id="head1"src="/images/github.jpg">
+			<h1 id="head2" >Display Our Blocks!</h1>
+			<img id="head3" src="/images/catandninja.png" style="height: 50px;">
 		</div>
 		<div id="main">
 			<div class="row">
