--- a/index.html
+++ b/index.html
@@ -11,77 +11,77 @@
 <body>
 	<div id="backdrop">
 		<div id="header">
-			<img id="head1"src="/images/github.jpg">
+			<img id="head1" src="/images/github.jpg" alt="github">
 			<h1 id="head2" >Display Our Blocks!</h1>
-			<img id="head3" src="/images/catandninja.png" style="height: 50px;">
+			<img id="head3" src="/images/catandninja.png" alt="cat and ninja" style="height: 50px;">
 		</div>
 		<div id="main">
 			<div class="row">
 				<div class="blue">
-				<img src="/images/dojocat.jpg" class="">
+				<img src="/images/dojocat.jpg" alt="dojo cat">
 				</div>
 				<div class="red">
-					<img src="/images/heisencat.png" class="">
+					<img src="/images/heisencat.png" alt="heinsen cat">
 				</div>	
 				<div class="blue">
-				<img src="/images/linkcat.png" class="">
+				<img src="/images/linkcat.png" alt="link cat">
 				</div>
 				<div class="red">
-					<img src="/images/ironcat.png" class="">
+					<img src="/images/ironcat.png" alt="iron cat">
 				</div>	
 				<div class="blue">
-					<img src="/images/defunktocat.png" class="">
+					<img src="/images/defunktocat.png" alt="defunkto cat">
 				</div>
 			</div>
 			<div class="row">
 				<div class="blue">
-					<img src="/images/coder2.jpg" class="">
+					<img src="/images/coder2.jpg" alt="coder 2">
 				</div>
 				<div class="red">
-					<img src="/images/riddlocat.png" class="">
+					<img src="/images/riddlocat.png" alt="riddlo cat">
 				</div>	
 				<div class="blue">
-					<img src="/images/chellocat.jpg" class="">
+					<img src="/images/chellocat.jpg" alt="chello cat">
 				</div>
 				<div class="red">
-					<img src="/images/stormtroopocat.png" class="">
+					<img src="/images/stormtroopocat.png" alt="storm trooper cat">
 				</div>	
 				<div class="blue">
-					<img src="/images/visionary.jpg" class="">
+					<img src="/images/visionary.jpg" alt="visionary">
 				</div>
 			</div>	
 			<div class="row">
 				<div class="blue"> 
-					<img src="/images/cherry.jpg" class="">
+					<img src="/images/cherry.jpg" alt="cherry">
 				</div>
 				<div class="red">
-					<img src="/images/oktobercat.png" class="">
+					<img src="/images/oktobercat.png" alt="oktober cat">
 				</div>	
 				<div class="blue">
-					<img src="/images/mario.png" class="">
+					<img src="/images/mario.png" alt="mario">
 				</div>
 				<div class="red">
-					<img src="/images/cooler.png" class="">
+					<img src="/images/cooler.png" alt="cooler">
 				</div>	
 				<div class="blue">
-					<img src="/images/jean-luc-picat.jpg" class="">
+					<img src="/images/jean-luc-picat.jpg" alt="jean luc picat">
 				</div>
 			</div>
 			<div class="row">
 				<div class="blue">
-					<img src="/images/aidorucat.png" class="">
+					<img src="/images/aidorucat.png" alt="aidoru cat">
 				</div>
 				<div class="red">
-					<img src="/images/domo-cat.png" class="">
+					<img src="/images/domo-cat.png" alt="domo cat">
 				</div>
 				<div class="blue">
-					<img src="/images/kantana.jpg" class="">
+					<img src="/images/kantana.jpg" alt="katana">
 				</div>
 				<div class="red">
-					<img src="/images/daftpunk.gif" class="">
+					<img src="/images/daftpunk.gif" alt="daft punk">
 				</div>
 				<div class="blue">
-					<img src="/images/codercat.jpg" class="">
+					<img src="/images/codercat.jpg" alt="coder cat">
 				</div>
 			</div>
 		</div>
