--- a/index.html
+++ b/index.html
@@ -8,15 +8,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="/css/style.css">
 </head>
-<body>
-	<div id="backdrop">
-		<div id="header">
-			<img id="head1" src="/images/github.jpg" alt="github">
-			<h1 id="head2" >Display Our Blocks!</h1>
-			<img id="head3" src="/images/catandninja.png" alt="cat and ninja" style="height: 50px;">
-		</div>
-		<div id="main">
-			<div class="row">
+	<body>
+		<div id="backdrop">
+			<div id="header">
+				<img id="head1" src="/images/github.jpg" alt="github">
+				<span id="head2" >Display Our Blocks!</span>
+				<img id="head3" src="/images/catandninja.png" alt="cat and ninja">
+			</div>
+			<div id="main">
 				<div class="blue">
 				<img src="/images/dojocat.jpg" alt="dojo cat">
 				</div>
@@ -31,9 +30,7 @@
 				</div>	
 				<div class="blue">
 					<img src="/images/defunktocat.png" alt="defunkto cat">
-				</div>
-			</div>
-			<div class="row">
+				</div>   
 				<div class="blue">
 					<img src="/images/coder2.jpg" alt="coder 2">
 				</div>
@@ -49,8 +46,6 @@
 				<div class="blue">
 					<img src="/images/visionary.jpg" alt="visionary">
 				</div>
-			</div>	
-			<div class="row">
 				<div class="blue"> 
 					<img src="/images/cherry.jpg" alt="cherry">
 				</div>
@@ -66,8 +61,6 @@
 				<div class="blue">
 					<img src="/images/jean-luc-picat.jpg" alt="jean luc picat">
 				</div>
-			</div>
-			<div class="row">
 				<div class="blue">
 					<img src="/images/aidorucat.png" alt="aidoru cat">
 				</div>
@@ -85,7 +78,6 @@
 				</div>
 			</div>
 		</div>
-	</div>
-</body>
+	</body>
 </html>
 
